--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter:
     sdk: flutter
   get: ^4.6.5
+  google_fonts: ^4.0.3
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -23,3 +24,14 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/
+
+  fonts:
+    - family: instagramSans
+      fonts:
+        - asset: assets/fonts/InstagramSans.ttf
+          weight: 400
+        - asset: assets/fonts/InstagramSansBold.ttf
+          weight: 700
