--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
     sdk: flutter
   get: ^4.6.5
   google_fonts: ^4.0.3
+  smooth_page_indicator: ^1.0.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
